Item3740:    * fixed twikiPageForms for FF    * fixed spacings of list elements in sidebar navigation for IE
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN/twikiplugins@13088 a00a5322-12db-0310-a70b-8735589c885e

--- a/NatSkin/pub/TWiki/NatSkin/GettysburgStyle.css
+++ b/NatSkin/pub/TWiki/NatSkin/GettysburgStyle.css
@@ -280,7 +280,8 @@ hr {
 .natSideBar ol,
 .natSideBar ul {
   color:#003366;
-  padding-left:1.2em;
+  padding-left:0px;
+  margin:0px 0px 10px 1.2em;
 }
 .natSideBar ol {
   padding-left:2em;
